2001-07-31  Martin Baulig  <baulig@suse.de>

	* monikers/: Don't build this directory.

2001-07-28  ERDI Gergo  <cactus@cactus.rulez.org>

	* configure.in: depend on libbonobo 1.98.0

2001-07-27  Michael Meeks  <michael@ximian.com>

	* configure.in: add xml-i18n tools.

	* tests/test-moniker.c (main): add.

	* tests/Makefile.am: upd.

2001-07-14  Martin Baulig  <baulig@suse.de>

	* configure.in (BONOBO_IDLDIR): AC_SUBST this.

2001-07-12  Darin Adler  <darin@bentspoon.com>

	* configure.in: Remove duplicate AC_PROG_LEX.
	* monikers/bonobo-storage-vfs.c: Remove unneeded include.
	* monikers/bonobo-stream-fs.c: (bonobo_stream_create): Use
	gnome-vfs MIME calls.
	* monikers/bonobo-stream-vfs.c: Remove unneeded include.

2001-07-11  Martin Baulig  <baulig@suse.de>

	* configure.in: Don't define ENABLE_ORBIT2, the conditionals
	are all gone now.

	* configure.in: Require autoconf 2.50b.

2001-07-10  Michael Meeks  <michael@ximian.com>

	* configure.in: always define ENABLE_ORBIT2
	require a version of libbonobo that requires ORBit2.

2001-07-10  Michael Meeks  <michael@ximian.com>

	* tests/test-storage.c (main): hack it up.

2001-07-09  Michael Meeks  <michael@ximian.com>

	* tests: add.

	* tests/Makefile.am: add.

	* tests/test-storage.c: add.

2001-07-08  Seth Nickell  <snickell@stanford.edu>

	* libgnome/libgnome-init.c: (gnome_oaf_pre_args_parse):

	Don't call g_thread_init () if it has already been called
	by another library / application / what have you. g_thread_init
	can only be called *once*.
	
	* po/ChangeLog:

	Curse you gettext.

Thu Jun 28 22:58:23 2001  Owen Taylor  <otaylor@redhat.com>

	* libgnome/gnome-program.c: g_type_init() no longer
	has an arg. 

Thu Jun 28 10:39:18 2001  Jonathan Blandford  <jrb@redhat.com>

	* configure.in: remove test for make-inline-pixbufs, as this
	program no longer exists, and libgnome hardly needs it anyway.

2001-06-28  Michael Meeks  <michael@ximian.com>

	* configure.in (gnomelocaledir): add --enable-orbit2
