@@ -1,4 +1,3 @@
-libgnome/gnome-ditem.c
 libgnome/gnome-exec.c
 libgnome/gnome-moz-remote2.c
 libgnome/gnome-url.c
