@@ -1,3 +1,10 @@
+2001-08-01  Michael Meeks  <michael@ximian.com>
+
+	* configure.in: prune redundant pkgconfig checks, let the
+	deps do the work ...
+
+	* port to bonobo-activation.
+
 2001-07-31  Martin Baulig  <baulig@suse.de>
 
 	* monikers/: Don't build this directory.
